index page added and reveiw page with a 5 star rating added as image

--- a/reveiw.html
+++ b/reveiw.html
@@ -3,11 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>passcode cohort</title>
+    <title>Document</title>
+
 </head>
 <body>
-    <h1>obidient tech space founder: olisa macaulay skyline</h1>
-
-    
+    <img src="./skyline revew.PNG" alt="">
 </body>
 </html>
